@@ -476,7 +476,6 @@ int main(int argc, char *argv[]) {
     REF_GRID ref_grid;
 
     RSS(ref_fixture_tet_grid(&ref_grid, ref_mpi), "set up");
-    RSS(ref_metric_unit_node(ref_grid_node(ref_grid)), "id metric");
 
     RSS(ref_collapse_pass(ref_grid), "pass");
 
@@ -490,7 +489,6 @@ int main(int argc, char *argv[]) {
     REF_GRID ref_grid;
 
     RSS(ref_fixture_tet_grid(&ref_grid, ref_mpi), "set up");
-    RSS(ref_metric_unit_node(ref_grid_node(ref_grid)), "id metric");
 
     ref_node_metric(ref_grid_node(ref_grid), 5, 3) = 1.0 / (10.0 * 10.0);
 
@@ -632,7 +630,6 @@ int main(int argc, char *argv[]) {
     REF_GRID ref_grid;
 
     RSS(ref_fixture_pri_grid(&ref_grid, ref_mpi), "set up");
-    RSS(ref_metric_unit_node(ref_grid_node(ref_grid)), "id metric");
 
     RSS(ref_collapse_twod_pass(ref_grid), "pass");
 
@@ -647,7 +644,6 @@ int main(int argc, char *argv[]) {
     REF_GRID ref_grid;
 
     RSS(ref_fixture_pri_grid(&ref_grid, ref_mpi), "set up");
-    RSS(ref_metric_unit_node(ref_grid_node(ref_grid)), "id metric");
 
     ref_node_metric(ref_grid_node(ref_grid), 5, 1) = 1.0 / (10.0 * 10.0);
     ref_node_metric(ref_grid_node(ref_grid), 5, 4) = 1.0 / (10.0 * 10.0);
