@@ -248,7 +248,6 @@ int main(void) {
     REF_GRID ref_grid;
 
     RSS(ref_fixture_tet_grid(&ref_grid, ref_mpi), "set up");
-    RSS(ref_metric_unit_node(ref_grid_node(ref_grid)), "id metric");
 
     RSS(ref_split_pass(ref_grid), "pass");
 
@@ -262,7 +261,6 @@ int main(void) {
     REF_GRID ref_grid;
 
     RSS(ref_fixture_tet_grid(&ref_grid, ref_mpi), "set up");
-    RSS(ref_metric_unit_node(ref_grid_node(ref_grid)), "id metric");
 
     ref_node_metric(ref_grid_node(ref_grid), 5, 3) = 1.0 / (0.25 * 0.25);
 
@@ -328,7 +326,6 @@ int main(void) {
     REF_GRID ref_grid;
 
     RSS(ref_fixture_pri_grid(&ref_grid, ref_mpi), "set up");
-    RSS(ref_metric_unit_node(ref_grid_node(ref_grid)), "id metric");
 
     RSS(ref_split_twod_pass(ref_grid), "pass");
 
@@ -342,7 +339,6 @@ int main(void) {
     REF_GRID ref_grid;
 
     RSS(ref_fixture_pri_grid(&ref_grid, ref_mpi), "set up");
-    RSS(ref_metric_unit_node(ref_grid_node(ref_grid)), "id metric");
 
     ref_node_metric(ref_grid_node(ref_grid), 5, 1) = 1.0 / (0.25 * 0.25);
     ref_node_metric(ref_grid_node(ref_grid), 5, 4) = 1.0 / (0.25 * 0.25);
